--- a/CyberBank/report/screenshots/CyberBank-Report.html
+++ b/CyberBank/report/screenshots/CyberBank-Report.html
@@ -5,7 +5,7 @@
     <title>Protractor Screenshot Report</title>
 
     <link rel="stylesheet" href="assets/main.css">
-    <link rel="stylesheet" href="assets/bootstrap.css">
+    <link rel="stylesheet" href="assets\bootstrap.css">
     <script src="assets/angular.min.js"></script>
     <script src="app.js"></script>
     <script src="assets/jquery.min.js"></script>
